wrap up modal logic section, stub out epistemic and doxastic sections

--- a/Chapter_02.tex
+++ b/Chapter_02.tex
@@ -197,6 +197,14 @@ Relaxing this condition changes the frame, and in doing so changes the logic. If
 \end{itemize}
 
 We saw earlier that reflexive frames are also serial frames, because we proved that we could derive the axiom for serial frames as a theorem from just the axiom for reflexive frames.
+
+These conditions are not exhaustive, but they represent some of the commonly combined conditions used to define axioms of different modal logics. By combining frame conditions, a modal operator is defined with the properties desired. For example, if we wish to define a modal operator for reasoning about the knowledge of ideally rational agents, as is done in Fagin \emph{et. al}~\cite{FHMV} and Hintikka~\cite{Hintikka}, impose the frame conditions of transitivity, reflexivity, and Euclidean. However, if we wish to develop a logic for belief, as the previously cited works also do, we must impose transitivity, Euclidean, and seriality. The reasons for this are explored in the following sections.
+
+\section{Epistemic Logic}
+This section presents epistemic logic, the logic for reasoning about the knowledge of ideally rational agents.
+
+\section{Doxastic Logic}
+This section presents doxastic logic, the logic for reasoning about belief.
 %This is formalized in a couple different ways in the literature, sometimes as we did before mapping a proposition-world pair to a Boolean, sometimes defining propositions as sets of worlds, where $V(w)\in p$ if and only if $p$ is true at world $w$. The former convention will be followed here.
 
 
